# Yuudi

./: .env.dev.example  .gitignore  README.md  bot.py  gitpush.bat  push -f.bat  pyproject.toml  requirements.txt
yuudi/: __init__.py  util.py
yuudi/plugins/chat/: __init__.py  auth_qa.py  darkneteasy.py  poke.py  zai.py
yuudi/plugins/chat/tql/: __init__.py  tql.txt
yuudi/plugins/devtools/: __init__.py  echo.py  testip.py
yuudi/plugins/devtools/httpstatuscode/: __init__.py  httpstatuscode.json
yuudi/plugins/hourcall/: __init__.py
yuudi/plugins/setu/: __init__.py
