[tool.poetry]
name = "Yuudi"
version = "0.1.0"
description = ""
authors = ["Dihe Chen <Chendihe4975@gmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
